src/objects/Visit_Report__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Visit_reports</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Competitive_information__c</fullName>
        <label>Competitive information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Competitor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Competitor</label>
        <referenceTo>Competition__c</referenceTo>
        <relationshipLabel>Visit Reports</relationshipLabel>
        <relationshipName>Visit_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Visit Reports</relationshipLabel>
        <relationshipName>Visit_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Goal_of_next_visit__c</fullName>
        <label>Goal of next visit</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Goal_of_the_visit__c</fullName>
        <label>Goal of the visit</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Main_competitor__c</fullName>
        <label>Main competitor</label>
        <picklist>
            <picklistValues>
                <fullName>Arcon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daley Ferraro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Giffen Koerth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incendies.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MEC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Origin and Cause</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pyrotech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technorm</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Prospecting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upselling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Courtesy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Présentation CEPXpress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Présentation Scoping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Présentation Transport</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Présentation Véhicules</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Visit Report</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Date__c</columns>
        <columns>Account__c</columns>
        <columns>Competitive_information__c</columns>
        <columns>Goal_of_the_visit__c</columns>
        <columns>Main_competitor__c</columns>
        <columns>Goal_of_next_visit__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>fr</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Visit Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Visit Reports</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>